login copy_all_url2/

--- a/copy_all_url2/manifest.json
+++ b/copy_all_url2/manifest.json
@@ -8,6 +8,9 @@
    "icons": {
       "128": "images/copyurl_128.png"
    },
+   "chrome_url_overrides": {
+    "newtab": "newtab.html"
+   },
    "name": "Create Url",
    "options_page": "options.html",
    "permissions": [ "tabs", "http://*/*", "https://*/*" ],
