--- a/copy_all_url/manifest.json
+++ b/copy_all_url/manifest.json
@@ -1,24 +1,26 @@
 {
-   "browser_action": {
-      "default_icon": "images/copyurl_19.png",
-      "default_title": "Create Url...",
-      "popup": "popup.html"
-   },
-   "description": "Copy all openned tabs URL into clipboard",
-   "icons": {
-      "128": "images/copyurl_128.png"
-   },
-   "chrome_url_overrides": {
-    "newtab": "newtab.html"
-   },
-   "name": "Create Url",
-   "options_page": "options.html",
-   "permissions": [ "tabs", "http://*/*", "https://*/*" ],
-    "content_scripts": [{
-      "matches": ["http://*/*", "https://*/*"],                
-      "js": ["js/jquery-1.7.1.min.js"] 
-    }],
-   "update_url": "http://clients2.google.com/service/update2/crx",
-   "version": "1.0"
+	"browser_action": {
+		"default_icon": "images/copyurl_19.png",
+		"default_title": "Create Url...",
+		"popup": "popup.html"
+	},
+	"description": "Copy all openned tabs URL into clipboard",
+	"icons": {
+		"128": "images/copyurl_128.png"
+	},
+	"chrome_url_overrides": {
+		"newtab": "newtab.html"
+	},
+	"name": "Create Url",
+	"options_page": "options.html",
+	"permissions": [ 
+		"tabs", "http://*/*", "https://*/*"
+	 ],
+	"content_scripts": [{
+		"matches": ["http://*/*", "https://*/*"],                
+		"js": ["js/jquery-1.7.1.min.js"] 
+	}],
+	"update_url": "http://clients2.google.com/service/update2/crx",
+	"version": "1.0"
 }
 
